--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraColaborador.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraColaborador.html
@@ -21,15 +21,15 @@
 					<div class="row row-cols-3 ">
 						<div>
 							<label>ID</label>
-							<input class="form-control" th:field="*{idColaborador}" type="text" />
+							<input class="form-control" th:field="*{idColaborador}" type="text" readonly />
 						</div>
 						<div>
 							<label>FECHA REG</label>
-							<input class="form-control" th:field="*{fecharegColaborador}" type="date" />
+							<input class="form-control" th:field="*{fecharegColaborador}" type="date" readonly/>
 						</div>
 						<div>
 							<label>ESTADO</label>
-							<input class="form-control" th:field="*{estadoColaborador}" type="text" />
+							<input class="form-control" th:field="*{estadoColaborador}" type="text" readonly/>
 						</div>
 					</div>
 
