--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraDirentrega_usuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraDirentrega_usuario.html
@@ -28,15 +28,15 @@
 					<div class="row row-cols-3 ">
 						<div>
 							<label>ID</label>
-							<input class="form-control" th:field="*{idDirentrega}" type="text" />
+							<input class="form-control" th:field="*{idDirentrega}" type="text" readonly/>
 						</div>
 						<div>
 							<label>FECHA REG</label>
-							<input class="form-control" th:field="*{fecharegDirentrega}" type="date" />
+							<input class="form-control" th:field="*{fecharegDirentrega}" type="date" readonly />
 						</div>
 						<div>
 							<label>ESTADO</label>
-							<input class="form-control" th:field="*{estadoDirentrega}" type="text" />
+							<input class="form-control" th:field="*{estadoDirentrega}" type="text" readonly/>
 						</div>
 					</div>
 
