--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraUsuario.html
@@ -29,15 +29,15 @@
 					<div class="row row-cols-3 ">
 						<div>
 							<label>ID</label>
-							<input class="form-control" th:field="*{idUsuario}" type="text" placeholder="ID" />
+							<input class="form-control" th:field="*{idUsuario}" type="text" placeholder="ID" readonly/>
 						</div>
 						<div>
 							<label>FECHA REG</label>
-							<input class="form-control" th:field="*{fecharegUsuario}" type="date" placeholder="FECHA" />
+							<input class="form-control" th:field="*{fecharegUsuario}" type="date" placeholder="FECHA" readonly />
 						</div>
 						<div>
 							<label>ESTADO</label>
-							<input class="form-control"  th:field="*{estadoUsuario}" type="text" placeholder="ESTADO" />
+							<input class="form-control"  th:field="*{estadoUsuario}" type="text" placeholder="ESTADO" readonly/>
 						</div>
 					</div>
 
