--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaDirentrega_usuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaDirentrega_usuario.html
@@ -41,7 +41,7 @@
 						<td th:text="${direntrega_usuario.usuario.idUsuario}"></td>
 						<td th:text="${direntrega_usuario.idDirentrega}"></td>
 						<td th:text="${direntrega_usuario.distrito.idDistrito}"></td>
-						<td th:text="${direntrega_usuario.desDireentrega}"></td>
+						<td th:text="${direntrega_usuario.desDirentrega}"></td>
 						<td th:text="${direntrega_usuario.fecharegDirentrega}"></td>
 						<td th:text="${direntrega_usuario.estadoDirentrega}"></td>
 						<td>
