caja de comentarios

--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
@@ -23,6 +23,9 @@
 				<a class="nav-link" href="/listaColaborador">COLABORADOR</a>
 			</li>
 			<li class="nav-item">
+				<a class="nav-link" href="/comentario">COMENTARIOS</a>
+			</li>
+			<li class="nav-item">
 				<a class="nav-link" href="/homeProducto">HOME PRODUCTO</a>
 			</li>
 			
