--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
@@ -46,7 +46,7 @@
 						<td th:text="${usuario.idUsuario}"></td>
 						<td th:text="${usuario.tipoUsuario.desTipoUsuario}"></td>
 						<td th:text="${usuario.nomUsuario}"></td>
-						<td th:text="${usuario.apeUsu}"></td>
+						<td th:text="${usuario.apeUsuario}"></td>
 						<td th:text="${usuario.distritoUsuario.desDistrito}"></td>
 						<td th:text="${usuario.emailUsuario}"></td>
 						<td>
