--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraUsuario.html
@@ -49,9 +49,9 @@
 							<p th:errors="*{nomUsuario}" class="text-danger" th:if="${#fields.hasErrors('nomUsuario')}"></p>
 						</div>
 						<div>
-							<label for="apeUsu">APELLIDO</label>
-							<input th:field="*{apeUsu}" type="text" placeholder="APELLIDO" name="apeUsu"  class="form-control" />
-							<p th:errors="*{apeUsu}" class="text-danger" th:if="${#fields.hasErrors('apeUsu')}"></p>
+							<label for="apeUsuario">APELLIDO</label>
+							<input th:field="*{apeUsuario}" type="text" placeholder="APELLIDO" name="apeUsuario"  class="form-control" />
+							<p th:errors="*{apeUsu}" class="text-danger" th:if="${#fields.hasErrors('apeUsuario')}"></p>
 						</div>
 						
 						<div>
