--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
@@ -21,7 +21,7 @@
 				href="agregarUsuario">NUEVO USUARIO</a>
 			<a class="btn btn-success" th:href="@{registraUsuario}">NUEVO USUARIO</a>
 		</div>
-		
+
 		<div class="my-4">
 			<a class="btn btn-primary" th:href="@{/logout}">CERRAR SESION</a>
 		</div>
@@ -75,88 +75,8 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<div>
-						<form th:action="@{grabarUsuario}" th:object="${usuario}" method="post">
-
-							<div class="d-flex flex-column gap-3">
-								<div class="row row-cols-3 ">
-									<div>
-										<label>ID</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>FECHA REG</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>ESTADO</label>
-										<input class="form-control" type="text" />
-									</div>
-								</div>
-
-								<div class="row row-cols-2 g-2">
-
-									<div>
-										<label>NOMBRE</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>APELLIDO</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>TIPO</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>TELEFONO</label>
-										<input class="form-control" type="tel" />
-									</div>
-									<div>
-										<label>CELULAR</label>
-										<input class="form-control" type="tel" />
-									</div>
-									<div>
-										<label>DISTRITO</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>DIRECCION</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>DNI</label>
-										<input class="form-control" type="text" />
-									</div>
-									<div>
-										<label>EMAIL</label>
-										<input class="form-control" type="email" />
-									</div>
-									<div>
-										<label>PASSWORD</label>
-										<input class="form-control" type="text" />
-									</div>
-									<!--<div>
-										<label>IMAGEN</label>
-										<input class="form-control" type="file" />
-									</div>-->
-									<div>
-										<label>ESTADO</label>
-										<input class="form-control" type="text" />
-									</div>
-								</div>
-
-								<div class="modal-footer">
-									<div>
-										<button type=submit class="btn btn-success">GRABAR</button>
-									</div>
-								</div>
-
-							</div>
-
-
-						</form>
-					</div>
+					
+					<section th:insert="registraUsuario::fragGestionUsuario"></section>
 				</div>
 			</div>
 		</div>
