--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraUsuario.html
@@ -8,12 +8,12 @@
 <body>
 	<div th:replace="../static/include/navbar"></div>
 
-	<section class="container bg-light vh-100">
+	<div class="container bg-light vh-100">
 		<div>
 			<h2>GESTIONAR USUARIO</h2>
 		</div>
 
-		<div>
+		<section th:fragment="fragGestionUsuario">
 
 			<div th:if="${param.success}">
 				<div class="alert alert-info">Se registró correctamente...</div>
@@ -128,8 +128,8 @@
 				</form>
 			</div>
 
-		</div>
-	</section>
+		</section>
+	</div>
 
 </body>
 
