--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
@@ -31,55 +31,62 @@
 	<!-- Start Content -->
 	<div class="container-fluid py-5 ">
 		<div class="row m-0 p-0">
+
 			<!--Navbar de categorias -->
-			<div class="col-2 list-group  list-group-flush ">
+			<div class="col-lg-2 list-group  list-group-flush ">
+
 				<div class="list-group-item active">
 					<h4>CATEGORIAS</h4>
 				</div>
 				<div th:each="categoria : ${listaCategoria}" class="list-group-item list-group-item-action">
 					<h6 th:text="${categoria.desCategoriaProducto}"></h6>
 				</div>
-				
-			</div>
 
+			</div>
 			<!--Fin de navbar de categorias -->
 
 			<!--lista de productos -->
-			<div class="col-lg-10 row g-4 m-0 p-0">
-				<div class="row">
-					
-					<div class="">
-						<div class="d-flex">
-							<select class="form-control">
-								<option>Featured</option>
-								<option>A to Z</option>
-								<option>Item</option>
-							</select>
+			<div class="col-lg-10 row gap-4">
+
+				<div class="col-12">
+					<form>
+						<div class="col-4">
+							<label>FILTRO DE BUSQUEDA</label>
+							<input type="text" class="form form-control" />
 						</div>
-					</div>
+					</form>
 				</div>
-				<div th:if="${listaProductos}" class="row row-cols-4">
-					<div th:each="producto : ${listaProductos}" >
-						<div class="card">
-							<div class="card-header text-center" >
-								<h3 th:text="${producto.nomProducto}"></h4>
-							</div>
-							<div class="card-img-top">
-								<img src="https://laopinion.com/wp-content/uploads/sites/3/2019/04/p2.jpg?quality=80&strip=all" width="100%" height="250px" />
-							</div>
-							<div class="card-body ">
-								<h6>DESCRIPCION:</h6> <ol th:text="${producto.desProducto}"></ol> 
-								<h6>PRECIO: </h6><ol th:text="${producto.preciouniProducto}"></ol>
-								<h6>STOCK: </h6><ol th:text="${producto.stockProducto}"></ol>
-								<div>
-									<button class="btn btn-success">AGREGAR</button>
+
+				<div class="col-12">
+					<div th:if="${listaProductos}" class="row row-cols-4 ">
+						<div th:each="producto : ${listaProductos}">
+							<div class="card">
+								<div class="card-header text-center">
+									<h3 th:text="${producto.nomProducto}">
+										</h4>
+								</div>
+								<div class="card-img-top">
+									<img src="https://laopinion.com/wp-content/uploads/sites/3/2019/04/p2.jpg?quality=80&strip=all"
+										width="100%" height="250px" />
+								</div>
+								<div class="card-body ">
+									<h6>DESCRIPCION:</h6>
+									<ol th:text="${producto.desProducto}"></ol>
+									<h6>PRECIO: </h6>
+									<ol th:text="${producto.preciouniProducto}"></ol>
+									<h6>STOCK: </h6>
+									<ol th:text="${producto.stockProducto}"></ol>
+									<div>
+										<button class="btn btn-success">AGREGAR</button>
+									</div>
 								</div>
 							</div>
-						</div>
 
+						</div>
 					</div>
 				</div>
-				<div div="row">
+
+				<div class="col-12">
 					<ul class="pagination pagination-lg justify-content-start">
 						<li class="page-item disabled">
 							<a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0" href="#"
@@ -94,6 +101,7 @@
 						</li>
 					</ul>
 				</div>
+
 			</div>
 			<!--fin de lista de productos -->
 
