--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
@@ -58,7 +58,7 @@
 				</div>
 
 				<div class="col-12">
-					<div th:if="${listaProductos}" class="row row-cols-4 ">
+					<div th:if="${listaProductos}" class="row row-cols-4 g-4">
 						<div th:each="producto : ${listaProductos}">
 							<div class="card">
 								<div class="card-header text-center">
